force-app/main/default/objects/ZoomParticipant__c/ZoomParticipant__c.object-meta.xml
<CustomObject>
    <label>ZoomParticipant</label>
    <nameField>
        <label>ZoomParticipant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZoomParticipants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>