force-app/main/default/objects/ZoomParticipant__c/fields/ZoomMeeting__c.field-meta.xml
<CustomField>
    <fullName>ZoomMeeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ZoomMeeting</label>
    <referenceTo>ZoomMeeting__c</referenceTo>
    <relationshipLabel>ZoomParticipants</relationshipLabel>
    <relationshipName>ZoomParticipants</relationshipName>
    <type>Lookup</type>
</CustomField>