force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantEmail__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantEmail__c</fullName>
    <label>ZoomParticipantEmail</label>
    <type>Email</type>
</CustomField>