force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantJoinTime__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantJoinTime__c</fullName>
    <label>ZoomParticipantJoinTime</label>
    <type>DateTime</type>
</CustomField>