force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantLeaveReason__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantLeaveReason__c</fullName>
    <description>The reason why the participant left the meeting, where $name is the participant&apos;s username:

$name left the meeting.
$name got disconnected from the meeting.
Host ended the meeting.
Host closed the meeting.
Host started a new meeting.
Network connection error.
Host did not join.
Exceeded free meeting minutes limit.
Removed by host.
Unknown reason.
Leave waiting room.
Removed by host from waiting room.</description>
    <label>ZoomParticipantLeaveReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>