force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantLeaveTime__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantLeaveTime__c</fullName>
    <label>ZoomParticipantLeaveTime</label>
    <type>DateTime</type>
</CustomField>