force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantMeetingDuration__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantMeetingDuration__c</fullName>
    <description>The scheduled meeting duration.</description>
    <label>ZoomParticipantMeetingDuration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>