force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantMeetingEvent__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantMeetingEvent__c</fullName>
    <description>The name of the event.</description>
    <label>ZoomParticipantMeetingEvent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>