force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantMeetingId__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantMeetingId__c</fullName>
    <label>ZoomParticipantMeetingId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>