force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantMeetingStartTime__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantMeetingStartTime__c</fullName>
    <description>The meeting&apos;s start time.</description>
    <label>ZoomParticipantMeetingStartTime</label>
    <type>DateTime</type>
</CustomField>