force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantMeetingTimeZone__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantMeetingTimeZone__c</fullName>
    <label>ZoomParticipantMeetingTimeZone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>