force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantMeetingTopic__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantMeetingTopic__c</fullName>
    <description>The meeting&apos;s topic.</description>
    <label>ZoomParticipantMeetingTopic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>