force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantMeetingType__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantMeetingType__c</fullName>
    <label>ZoomParticipantMeetingType</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>