force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantMeetingUUID__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantMeetingUUID__c</fullName>
    <externalId>true</externalId>
    <label>ZoomParticipantMeetingUUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>