force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantRegistrant_id__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantRegistrant_id__c</fullName>
    <description>The participant&apos;s registrant ID.</description>
    <label>ZoomParticipantRegistrant_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>