force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantRegistrantAddress__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantRegistrantAddress__c</fullName>
    <label>ZoomParticipantRegistrantAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>