force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantRegistrantCity__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantRegistrantCity__c</fullName>
    <label>ZoomParticipantRegistrantCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>