force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantRegistrantCountry__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantRegistrantCountry__c</fullName>
    <description>The registrant&apos;s two-letter country code.</description>
    <label>ZoomParticipantRegistrantCountry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>