force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantRegistrantEmail__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantRegistrantEmail__c</fullName>
    <label>ZoomParticipantRegistrantEmail</label>
    <type>Email</type>
</CustomField>