force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantRegistrantFirstName__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantRegistrantFirstName__c</fullName>
    <label>ZoomParticipantRegistrantFirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>