force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantRegistrantId__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantRegistrantId__c</fullName>
    <label>ZoomParticipantRegistrantId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>