force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantRegistrantIndustry__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantRegistrantIndustry__c</fullName>
    <description>The registrant&apos;s industry.</description>
    <label>ZoomParticipantRegistrantIndustry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>