force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantRegistrantJobTitle__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantRegistrantJobTitle__c</fullName>
    <label>ZoomParticipantRegistrantJobTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>