force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantRegistrantLastName__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantRegistrantLastName__c</fullName>
    <label>ZoomParticipantRegistrantLastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>