force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantRegistrantPhone__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantRegistrantPhone__c</fullName>
    <description>The registrant&apos;s phone number.</description>
    <label>ZoomParticipantRegistrantPhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>