force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantRegistrantState__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantRegistrantState__c</fullName>
    <description>The registrant&apos;s state or province.</description>
    <label>ZoomParticipantRegistrantState</label>
    <length>255</length>
    <type>Text</type>
</CustomField>