force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantRegistrantZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantRegistrantZipCode__c</fullName>
    <description>The registrant&apos;s ZIP or postal code.</description>
    <label>ZoomParticipantRegistrantZipCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>