force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantStatus__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantStatus__c</fullName>
    <label>ZoomParticipantStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>approved</fullName>
            </value>
            <value>
                <fullName>pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>