force-app/main/default/objects/ZoomParticipant__c/fields/ZoomParticipantUserId__c.field-meta.xml
<CustomField>
    <fullName>ZoomParticipantUserId__c</fullName>
    <label>ZoomParticipantUserId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>